# marketiq

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 304a8e9fe806_create_metrics_and_anomalies_hypertables.py  d880b35beeea_create_trades_hypertable.py
src/marketiq/: __init__.py  config.py  main.py
src/marketiq/api/: app.py  routes_rest.py
src/marketiq/domain/: trade.py
src/marketiq/ingestion/: buffer.py  exchange.py
src/marketiq/ingestion/binance/: client.py  normalize.py  schemas.py
src/marketiq/processing/: anomalies.py  metrics.py  pipeline.py
src/marketiq/storage/: database.py  mappers.py  models.py  repository.py
tests/: conftest.py  fakes.py
tests/test_api/: test_health.py
tests/test_binance/: test_binance.py  test_client.py
tests/test_config/: test_config.py
tests/test_ingestion/: test_buffer.py
tests/test_package_importable/: test_version.py
tests/test_processing/: test_anomalies.py  test_metrics.py  test_pipeline.py
tests/test_storage/: conftest.py  test_repository.py
