[project]
name = "marketiq"
version = "0.1.0"
description = "Marketiq is a market with AI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
marketiq = "marketiq:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
