[project]
name = "marketiq"
version = "0.1.0"
description = "Marketiq is a market with AI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "websockets>=16.0",
]

[project.scripts]
marketiq = "marketiq:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
